# ROS_RCcar

./: README.md
IROL_RC/autoware_launch/: CMakeLists.txt  package.xml
IROL_RC/autoware_launch/launch/: autoware.launch  autoware_no_global.launch  devel.launch  high_level_controller_direct.launch  localization.launch  object_detection_tracking.launch  op_common_params.launch  op_global_planner.launch  op_local_planner.launch  pure_pursuit_controller.launch  sim_aw_full_stack.launch  stanley.launch
IROL_RC/rccar_jetson/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  package.xml
IROL_RC/rccar_jetson/cfg/: global_planner_params.yaml  mobile_robot_odometry.yaml  move_base_params.yaml  ps4.config.yaml  rviz_config.rviz
IROL_RC/rccar_jetson/include/: odom_publisher.hpp
IROL_RC/rccar_jetson/launch/: aw_full_stack.launch  aw_full_stack_no_global.launch  bringup edu.launch  bringup.launch  full_nav.launch  hector_slam.launch  localization.launch  map_saver.launch  odom_publisher.launch  sensors.launch  sim_bringup.launch  ukf_template.launch
IROL_RC/rccar_jetson/maps/: hallway.yaml  hallway_bothway_exteneded.osm  hallway_nomalized.osm  hallway_normalized.osm
IROL_RC/rccar_jetson/param/: demo_car.yaml  edu_car.yaml  ukf_template.yaml  xsens_mti_node.yaml
IROL_RC/rccar_jetson/rviz/: tamiya_amcl.rviz
IROL_RC/stanley/: CMakeLists.txt  package.xml
IROL_RC/stanley/include/stanley/: stanley.h  stanley_core.h  stanley_viz.h
IROL_RC/stanley/launch/: stanley.launch  stanley_prev.launch
IROL_RC/stanley/src/: stanley.cpp  stanley_core.cpp  stanley_core_prev.cpp  stanley_node.cpp  stanley_viz.cpp
IROL_RC/tamiya_description/: CMakeLists.txt  package.xml
IROL_RC/tamiya_jetracer/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  package.xml  teb_local_planner_params.yaml
IROL_RC/tamiya_jetracer/cfg/: mobile_robot_odometry.yaml
IROL_RC/tamiya_jetracer/cfg/carlike/: teb_local_planner_params.yaml
IROL_RC/tamiya_jetracer/include/: mobile_robot_odometry.hpp  odom_publisher.hpp
IROL_RC/tamiya_jetracer/launch/: full_nav.launch  localization.launch  nav.launch  odom_publisher.launch  robot_config.launch  sensors.launch
IROL_RC/tamiya_jetracer/maps/: mymap.yaml
IROL_RC/tamiya_jetracer/msg/: vesc_cmd.msg  vesc_feedback.msg
IROL_RC/tamiya_jetracer/param/: ukf_template.yaml
IROL_RC/tamiya_jetracer/rviz/: tamiya.rviz  tamiya_amcl.rviz  tamiya_run.rviz
IROL_RC/tamiya_jetracer/src/: motion_test.py  motor_example_ROS.py  odom_publisher.cpp  odom_publisher_bakup.cpp  odom_publishser.py  velocity.py  vesc_controller.py  vesc_controller_auto.py
PyVESC-master/pyvesc.egg-info/: PKG-INFO  SOURCES.txt
(+20 files in other folders)
